--- a/GOOD_SAMARITAN/index.html
+++ b/GOOD_SAMARITAN/index.html
@@ -170,8 +170,9 @@
             <div class="footer-col">
                 <h4>Contact Us</h4>
                 <p>Good Samaritan Home Care Pty Ltd</p>
-                <p>+0400 123 456</p>
-                <p>support@gshomecare.com.au</p>
+                <p>3/1 Victoria Road, Rooty Hill, NSW, 2766</p>
+                <p>+041 436 7324</p>
+                <p>goodsamaritan.au@gmail.com</p>
             </div>
             <div class="footer-col">
                 <h4>Quick Links</h4>
