--- a/GOOD_SAMARITAN/CONTACT_SAMARITAN.html
+++ b/GOOD_SAMARITAN/CONTACT_SAMARITAN.html
@@ -74,9 +74,10 @@
     <div class="footer-wrapper">
       <div class="footer-col">
         <h4>Contact Us</h4>
-        <p>Good Samaritan Home Care Pty Ltd</p>
-        <p>+61 123 456 789</p>
-        <p>support@gshomecare.com.au</p>
+                <p>Good Samaritan Home Care Pty Ltd</p>
+                <p>3/1 Victoria Road, Rooty Hill, NSW, 2766</p>
+                <p>+041 436 7324</p>
+                <p>goodsamaritan.au@gmail.com</p>
       </div>
       <div class="footer-col">
         <h4>Quick Links</h4>
