--- a/GOOD_SAMARITAN/CONTACT_SAMARITAN.html
+++ b/GOOD_SAMARITAN/CONTACT_SAMARITAN.html
@@ -34,6 +34,31 @@
     </div>
   </header>
 
+   <!-- Hero Banner -->
+  <section class="about-hero">
+    <h1>Visit Us</h1>
+    <p>Drop by and let us help you find the care and support you’re looking for.</p>
+  </section>
+
+
+
+  <!-- Embedded Google Map -->
+<section class="contact-text-custom">
+  
+  <!-- Right Side Google Map -->
+  <div class="about-map" style="flex: 1;">
+    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3317.066547421842!2d150.83199427570398!3d-33.758946173268804!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x6b129a490babceeb%3A0xc33729403f82c0e9!2sUnit%203%2F1%20Victoria%20Rd%2C%20Rooty%20Hill%20NSW%202766%2C%20Australia!5e0!3m2!1sen!2sph!4v1751967962326!5m2!1sen!2sph" 
+      width="100%" 
+      height="400" 
+      style="border:0; border-radius: 10px;" 
+      allowfullscreen="" 
+      loading="lazy" 
+      referrerpolicy="no-referrer-when-downgrade">
+    </iframe>
+  </div>
+</section>
+
+
   <!-- Hero Banner -->
   <section class="about-hero">
     <h1>Contact Us</h1>
@@ -58,21 +83,18 @@
   </div>
 </section>
 
-
-  <!-- Optional: Embedded Google Map -->
-  <!--
-  <section class="about-cta" style="min-height: 400px;">
-    <iframe
-      src="https://www.google.com/maps/embed?pb=YOUR_EMBED_URL"
-      width="100%" height="100%" style="border:0;" allowfullscreen="" loading="lazy">
-    </iframe>
-  </section>
-  -->
+<div id="successModal" class="modal">
+  <div class="modal-content">
+    <span class="close-btn" onclick="closeModal()">&times;</span>
+    <h2>Thank You!</h2>
+    <p>Your message has been sent successfully.</p>
+  </div>
+</div>
 
   <!-- Footer -->
   <footer class="samaritan-footer">
     <div class="footer-wrapper">
-      <div class="footer-col">
+       <div class="footer-col">
         <h4>Contact Us</h4>
                 <p>Good Samaritan Home Care Pty Ltd</p>
                 <p>3/1 Victoria Road, Rooty Hill, NSW, 2766</p>
@@ -106,35 +128,49 @@
     </div>
   </footer>
 </body>
+
+
 <script>
-  // Initialize EmailJS with your public key
-  emailjs.init("t6EzJISzr4Wnws-_r");
+    emailjs.init("t6EzJISzr4Wnws-_r");
 
-  // Form submission function
-  function sendMail() {
-    const params = {
-      name: document.getElementById("name").value,
-      email: document.getElementById("email").value,
-      message: document.getElementById("message").value
+    function sendMail() {
+      const params = {
+        name: document.getElementById("name").value,
+        email: document.getElementById("email").value,
+        message: document.getElementById("message").value
+      };
+
+      const serviceID = "service_ev0izgh";
+      const templateID = "template_le639v8";
+
+      emailjs.send(serviceID, templateID, params)
+        .then(res => {
+          document.getElementById("name").value = "";
+          document.getElementById("email").value = "";
+          document.getElementById("message").value = "";
+
+          console.log("SUCCESS!", res.status, res.text);
+          showModal();
+        })
+        .catch(err => {
+          console.error("FAILED...", err);
+          alert("There was an error sending your message.");
+        });
+    }
+
+    function showModal() {
+      document.getElementById("successModal").style.display = "block";
+    }
+
+    function closeModal() {
+      document.getElementById("successModal").style.display = "none";
+    }
+
+    window.onclick = function (event) {
+      const modal = document.getElementById("successModal");
+      if (event.target === modal) {
+        modal.style.display = "none";
+      }
     };
-
-    const serviceID = "service_ev0izgh";
-    const templateID = "template_le639v8";
-
-    emailjs.send(serviceID, templateID, params)
-      .then(res => {
-        // Clear input fields after success
-        document.getElementById("name").value = "";
-        document.getElementById("email").value = "";
-        document.getElementById("message").value = "";
-
-        console.log("SUCCESS!", res.status, res.text);
-        alert("Your message was sent successfully!");
-      })
-      .catch(err => {
-        console.error("FAILED...", err);
-        alert("There was an error sending your message.");
-      });
-  }
-</script>
+  </script>
 </html>
