--- a/GOOD_SAMARITAN/CONTACT_SAMARITAN.html
+++ b/GOOD_SAMARITAN/CONTACT_SAMARITAN.html
@@ -120,7 +120,7 @@
     </div>
 </footer>
 
-<div id="successModal" class="modal">
+<div id="successModal" class= "modal" style = "display: none;">
   <div class="modal-content">
     <span class="close-btn" onclick="closeModal()">&times;</span>
     <h2>Thank You!</h2>
