--- a/GOOD_SAMARITAN/index.html
+++ b/GOOD_SAMARITAN/index.html
@@ -195,7 +195,7 @@
             <div class="footer-col">
                 <h4>Legal</h4>
                 <ul>
-                    <li><a href="#">Privacy Policy</a></li>
+                    <li><a href="SAMARITAN_POLICY.html">Privacy Policy</a></li>
                     <li><a href="#">Terms of Use</a></li>
                 </ul>
             </div>
