--- a/GOOD_SAMARITAN/index.html
+++ b/GOOD_SAMARITAN/index.html
@@ -196,7 +196,7 @@
                 <h4>Legal</h4>
                 <ul>
                     <li><a href="SAMARITAN_POLICY.html">Privacy Policy</a></li>
-                    <li><a href="#">Terms of Use</a></li>
+                    <li><a href="SAMARITAN_TERMS.html">Terms of Use</a></li>
                 </ul>
             </div>
             <div class="footer-col">
