--- a/GOOD_SAMARITAN/SAMARITAN_TERMS.html
+++ b/GOOD_SAMARITAN/SAMARITAN_TERMS.html
@@ -14,7 +14,7 @@
   <header>
     <div class="brand">
       <img src="Images/Good_Samaritan.jpg" alt="Good Samaritan Logo" class="logo" />
-       <h1> Good Samaritan Home Care Pty Ltd.</h1>
+       <p> Good Samaritan Home Care </p>
     </div>
     <div class="navbar">
       <ul>
