--- a/GOOD_SAMARITAN/SAMARITAN_POLICY.html
+++ b/GOOD_SAMARITAN/SAMARITAN_POLICY.html
@@ -14,7 +14,7 @@
   <header>
     <div class="brand">
       <img src="Images/Good_Samaritan.jpg" alt="Good Samaritan Logo" class="logo" />
-      <p> Good Samaritan Home Care Pty Ltd.</p>
+      <p> Good Samaritan Home Care </p>
     </div>
     <div class="navbar">
       <ul>
