--- a/GOOD_SAMARITAN/CONTACT_SAMARITAN.html
+++ b/GOOD_SAMARITAN/CONTACT_SAMARITAN.html
@@ -18,7 +18,7 @@
   <header>
     <div class="brand">
       <img src="Images/Good_Samaritan.jpg" alt="Logo" class="logo" />
-       <p> Good Samaritan Home Care Pty Ltd.</p>
+       <p> Good Samaritan Home Care</p>
     </div>
     <div class="navbar">
       <ul>
