--- a/GOOD_SAMARITAN/index.html
+++ b/GOOD_SAMARITAN/index.html
@@ -20,7 +20,7 @@
     <header>
         <div class="brand">
             <img src="Images/Good_Samaritan.jpg" alt="Good Samaritan Logo" class="logo" />
-             <p> Good Samaritan Home Care Pty Ltd.</p>
+             <p> Good Samaritan Home Care </p>
         </div>
 
 
