--- a/GOOD_SAMARITAN/SAMARITAN_POLICY.html
+++ b/GOOD_SAMARITAN/SAMARITAN_POLICY.html
@@ -33,7 +33,7 @@
     <section style="margin-bottom: 2rem;">
       <h2>Introduction</h2>
       <p>
-        At Good Samaritan Home Care Pty Ltd ("we", "us", or "our"), we are committed to protecting the privacy and confidentiality of personal and sensitve information. 
+        At Good Samaritan Home Care Pty Ltd, we are committed to protecting the privacy and confidentiality of personal and sensitive information. 
         This Privacy Policy outlines how we collect, use, store, and disclose personal information in accordance with the Privacy Act 1988 (Cth) and the Australian Privacy Principles (APPs)
       </p>
     </section>
