--- a/GOOD_SAMARITAN/SAMARITAN_TERMS.html
+++ b/GOOD_SAMARITAN/SAMARITAN_TERMS.html
@@ -34,7 +34,7 @@
       <h2>Introduction</h2>
       <p>
        These Terms and Conditions outline the responsibilities, rights, and expectations between Good Samaritan Home Care Pty Ltd 
-       ("we", "us, "our") and the client ("You", "Your") receiving home care and community support services.
+       and the client receiving home care and community support services.
       </p>
     </section>
 
