--- a/GOOD_SAMARITAN/index.html
+++ b/GOOD_SAMARITAN/index.html
@@ -176,9 +176,10 @@
             <div class="footer-col">
                 <h4>Contact Us</h4>
                 <p>Good Samaritan Home Care Pty Ltd</p>
-                <p>3/1 Victoria Road, Rooty Hill, NSW, 2766</p>
+                <p>7B Victoria Road, Rooty Hill, NSW 2766</p>
                 <p>+041 436 7324</p>
-                <p>goodsamaritan.au@gmail.com</p>
+                <p>Samaritan.au@gmail.com</p>
+                <p>ABN: 17 663 060 188</p>
             </div>
             <div class="footer-col">
                 <h4>Quick Links</h4>
