--- a/GOOD_SAMARITAN/ABOUT_SAMARITAN.html
+++ b/GOOD_SAMARITAN/ABOUT_SAMARITAN.html
@@ -76,11 +76,12 @@
   <footer class="samaritan-footer">
     <div class="footer-wrapper">
       <div class="footer-col">
-        <h4>Contact Us</h4>
-            <p>Good Samaritan Home Care Pty Ltd</p>
-            <p>3/1 Victoria Road, Rooty Hill, NSW, 2766</p>
-            <p>+041 436 7324</p>
-            <p>goodsamaritan.au@gmail.com</p>
+         <h4>Contact Us</h4>
+         <p>Good Samaritan Home Care Pty Ltd</p>
+         <p>7B Victoria Road, Rooty Hill, NSW 2766</p>
+         <p>+041 436 7324</p>
+         <p>Samaritan.au@gmail.com</p>
+         <p>ABN: 17 663 060 188</p>
       </div>
       <div class="footer-col">
         <h4>Quick Links</h4>
