--- a/GOOD_SAMARITAN/SAMARITAN_POLICY.html
+++ b/GOOD_SAMARITAN/SAMARITAN_POLICY.html
@@ -129,9 +129,9 @@
         If you have any questions or requests regarding this Privacy Policy, please contact us at:
       </p>
       <ul style="padding-left: 1.2rem; list-style: disc;">
-        <li>3/1 Victoria Road, Rooty Hill, NSW, 2766</li>
+        <li> 7B Victoria Road, Rooty Hill, NSW 2766</li>
         <li> +041 436 7324</li>
-        <li> goodsamaritan.au@gmail.com </li>
+        <li> Samaritan.au@gmail.com </li>
         <li> ABN: 17 663 060 188</li>
       </ul>
     </section>
