--- a/GOOD_SAMARITAN/SAMARITAN_TERMS.html
+++ b/GOOD_SAMARITAN/SAMARITAN_TERMS.html
@@ -133,8 +133,8 @@
       </p>
       <ul style="padding-left: 1.2rem; list-style: disc;">
         <li>Phone: +041 436 7324</li>
-        <li>Email: goodsamaritan.au@gmail.com</li>
-        <li>Mail/In person: 3/1 Victoria Road, Rooty Hill, NSW, 2766</li>
+        <li>Email: Samaritan.au@gmail.com</li>
+        <li>Mail/In person: 7B Victoria Road, Rooty Hill, NSW, 2766</li>
         <li> ABN: 17 663 060 188 </li>
       </ul>
        <p>
