--- a/GOOD_SAMARITAN/CONTACT_SAMARITAN.html
+++ b/GOOD_SAMARITAN/CONTACT_SAMARITAN.html
@@ -43,7 +43,7 @@
   
   <!-- Right Side Google Map -->
   <div class="about-map" style="flex: 1;">
-    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3317.066547421842!2d150.83199427570398!3d-33.758946173268804!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x6b129a490babceeb%3A0xc33729403f82c0e9!2sUnit%203%2F1%20Victoria%20Rd%2C%20Rooty%20Hill%20NSW%202766%2C%20Australia!5e0!3m2!1sen!2sph!4v1751967962326!5m2!1sen!2sph" 
+  <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d13268.17135827608!2d150.834804023817!3d-33.75955883086616!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x6b129a49068afd0b%3A0x7498d21919ecd88!2s7B%20Victoria%20Rd%2C%20Rooty%20Hill%20NSW%202766%2C%20Australia!5e0!3m2!1sen!2sph!4v1752154536583!5m2!1sen!2sph"
       width="100%" 
       height="400" 
       style="border:0; border-radius: 10px;" 
