--- a/SAMARITAN_POLICY.html
+++ b/SAMARITAN_POLICY.html
@@ -14,15 +14,18 @@
   <header>
     <div class="brand">
       <img src="Images/Good_Samaritan.jpg" alt="Good Samaritan Logo" class="logo" />
-      <p> Good Samaritan Home Care </p>
     </div>
     <div class="navbar">
-      <ul>
-        <li><span class="fas fa-home" id="headIcon"></span><a href="index.html">Home</a></li>
-        <li><span class="fas fa-hand-holding-heart" id="headIcon"></span><a href="#services">Services</a></li>
-        <li><span class="fas fa-info-circle" id="headIcon"></span><a href="ABOUT_SAMARITAN.html">About</a></li>
-        <li><span class="fas fa-envelope" id="headIcon"></span><a href="CONTACT_SAMARITAN.html">Contact</a></li>
-      </ul>
+      <div class="searchBox">
+        <input type="text" placeholder="Search services...">
+        <i class="fas fa-search" id="searchIcon"></i>
+      </div>
+     <ul>
+                <li><span class="fas fa-home" id="headIcon"></span><a href="SAMARITAN_MAIN.html">Home</a></li>
+                <li><span class="fas fa-hand-holding-heart" id="headIcon"></span><a href="#services">Services</a></li>
+                <li><span class="fas fa-info-circle" id="headIcon"></span><a href="ABOUT_SAMARITAN.html">About</a></li>
+                <li><span class="fas fa-envelope" id="headIcon"></span><a href="CONTACT_SAMARITAN.html">Contact</a></li>
+     </ul>
     </div>
   </header>
 
@@ -33,7 +36,7 @@
     <section style="margin-bottom: 2rem;">
       <h2>Introduction</h2>
       <p>
-        At Good Samaritan Home Care Pty Ltd, we are committed to protecting the privacy and confidentiality of personal and sensitive information. 
+        At Good Samaritan Home Care Pty Ltd ("we", "us", or "our"), we are committed to protecting the privacy and confidentiality of personal and sensitve information. 
         This Privacy Policy outlines how we collect, use, store, and disclose personal information in accordance with the Privacy Act 1988 (Cth) and the Australian Privacy Principles (APPs)
       </p>
     </section>
@@ -129,10 +132,9 @@
         If you have any questions or requests regarding this Privacy Policy, please contact us at:
       </p>
       <ul style="padding-left: 1.2rem; list-style: disc;">
-        <li> 7B Victoria Road, Rooty Hill, NSW 2766</li>
+        <li>3/1 Victoria Road, Rooty Hill, NSW, 2766</li>
         <li> +041 436 7324</li>
-        <li> Samaritan.au@gmail.com </li>
-        <li> ABN: 17 663 060 188</li>
+        <li> goodsamaritan.au@gmail.com </li>
       </ul>
     </section>
   </main>
@@ -141,12 +143,11 @@
   <footer class="samaritan-footer">
     <div class="footer-wrapper">
        <div class="footer-col">
-               <h4>Contact Us</h4>
-               <p>Good Samaritan Home Care Pty Ltd</p>
-               <p>7B Victoria Road, Rooty Hill, NSW 2766</p>
-               <p>+041 436 7324</p>
-               <p>Samaritan.au@gmail.com</p>
-               <p>ABN: 17 663 060 188</p>
+                <h4>Contact Us</h4>
+                <p>Good Samaritan Home Care Pty Ltd</p>
+                <p>3/1 Victoria Road, Rooty Hill, NSW, 2766</p>
+                <p>+041 436 7324</p>
+                <p>goodsamaritan.au@gmail.com</p>
         </div>
       <div class="footer-col">
         <h4>Quick Links</h4>
@@ -160,7 +161,7 @@
         <h4>Legal</h4>
         <ul>
           <li><a href="SAMARITAN_POLICY.html">Privacy Policy</a></li>
-          <li><a href="SAMARITAN_TERMS.html">Terms of Use</a></li>
+          <li><a href="#">Terms of Use</a></li>
         </ul>
       </div>
       <div class="footer-col">
