--- a/SAMARITAN_TERMS.html
+++ b/SAMARITAN_TERMS.html
@@ -193,7 +193,7 @@
       <div class="footer-col">
         <h4>Legal</h4>
         <ul>
-          <li><a href="PRIVACY_POLICY.html">Privacy Policy</a></li>
+          <li><a href="SAMARITAN_POLICY.html">Privacy Policy</a></li>
           <li><a href="SAMARITAN_TERMS.html">Terms of Use</a></li>
         </ul>
       </div>
