--- a/index.html
+++ b/index.html
@@ -2,19 +2,45 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Good Samaritan Home Care Pty Ltd</title>
+  <!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-    <!-- Font Awesome -->
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
-    <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@500;700&family=Poppins:wght@300;400;600&display=swap" rel="stylesheet">
+  <title>Good Samaritan Home Care Pty Ltd | Compassionate In-Home Support in NSW</title>
+  <meta name="description" content="Good Samaritan Home Care Pty Ltd provides reliable, compassionate, and personalized in-home care services throughout Rooty Hill and surrounding NSW areas." />
+  <meta name="keywords" content="home care, aged care, disability support, in-home services, Good Samaritan, Rooty Hill, NDIS, elderly care, NSW" />
+  <meta name="author" content="Good Samaritan Home Care Pty Ltd" />
+  <meta name="robots" content="index, follow" />
 
-    <!-- Custom CSS -->
-    <link rel="stylesheet" href="Samaritan.css" />
-    <script src="https://cdn.jsdelivr.net/npm/@emailjs/browser@3/dist/email.min.js"></script>
+  <!-- Open Graph (Facebook Sharing) -->
+  <meta property="og:title" content="Good Samaritan Home Care Pty Ltd" />
+  <meta property="og:description" content="Delivering trusted, professional home care tailored to your needs in NSW." />
+  <meta property="og:image" content="https://goodsamaritan.site/Images/Good_Samaritan.jpg" />
+  <meta property="og:url" content="https://goodsamaritan.site/" />
+  <meta property="og:type" content="website" />
+
+  <!-- Twitter Card -->
+  <meta name="twitter:card" content="summary_large_image" />
+  <meta name="twitter:title" content="Good Samaritan Home Care Pty Ltd" />
+  <meta name="twitter:description" content="Trusted in-home support tailored to your family's needs in NSW." />
+  <meta name="twitter:image" content="https://goodsamaritan.site/Images/Good_Samaritan.jpg" />
+
+  <!-- Favicon -->
+  <link rel="icon" type="image/png" href="Images/Good_Samaritan.jpg" />
+
+  <!-- Fonts and Icons -->
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
+  <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@500;700&family=Poppins:wght@300;400;600&display=swap" rel="stylesheet">
+
+  <!-- Stylesheet -->
+  <link rel="stylesheet" href="Samaritan.css" />
+
+  <!-- EmailJS -->
+  <script src="https://cdn.jsdelivr.net/npm/@emailjs/browser@3/dist/email.min.js"></script>
 </head>
-
+    
 <body>
     <!-- Header with Video Background -->
     <header>
