--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
   <title>Good Samaritan Home Care Pty Ltd | Compassionate In-Home Support in NSW</title>
   <meta name="description" content="Good Samaritan Home Care Pty Ltd provides reliable, compassionate, and personalized in-home care services throughout Rooty Hill and surrounding NSW areas." />
-  <meta name="keywords" content="home care, aged care, disability support, in-home services, Good Samaritan, Rooty Hill, NDIS, elderly care, NSW" />
+  <meta name="keywords" content="goodsamaritan, home care, aged care, disability support, in-home services, Good Samaritan, Rooty Hill, NDIS, elderly care, NSW" />
   <meta name="author" content="Good Samaritan Home Care Pty Ltd" />
   <meta name="robots" content="index, follow" />
 
@@ -45,7 +45,7 @@
     <!-- Header with Video Background -->
     <header>
         <div class="brand">
-            <img src="Images/Good_Samaritan.jpg" alt="Good Samaritan Logo" class="logo" />
+            <img src="Images/Good_Samaritan.jpg" alt="goodsamaritan Logo" class="logo" />
              <p> Good Samaritan Home Care </p>
         </div>
 
