--- a/index.html
+++ b/index.html
@@ -8,14 +8,15 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-  <title>Good Samaritan Home Care Pty Ltd | Compassionate In-Home Support in NSW</title>
-  <meta name="description" content="Good Samaritan Home Care Pty Ltd provides reliable, compassionate, and personalized in-home care services throughout Rooty Hill and surrounding NSW areas." />
+  <title>goodsamaritan | Compassionate In-Home Support in NSW</title>
+  <meta name="description" content="goodsamaritan is your trusted provider of personalized, compassionate in-home care services throughout Rooty Hill and surrounding NSW areas." />
   <meta name="keywords" content="goodsamaritan, home care, aged care, disability support, in-home services, Good Samaritan, Rooty Hill, NDIS, elderly care, NSW" />
   <meta name="author" content="Good Samaritan Home Care Pty Ltd" />
   <meta name="robots" content="index, follow" />
+  <link rel="canonical" href="https://goodsamaritan.site/" />
 
   <!-- Open Graph (Facebook Sharing) -->
-  <meta property="og:title" content="Good Samaritan Home Care Pty Ltd" />
+  <meta property="og:title" content="goodsamaritan | Home Care in NSW" />
   <meta property="og:description" content="Delivering trusted, professional home care tailored to your needs in NSW." />
   <meta property="og:image" content="https://goodsamaritan.site/Images/Good_Samaritan.jpg" />
   <meta property="og:url" content="https://goodsamaritan.site/" />
@@ -23,7 +24,7 @@
 
   <!-- Twitter Card -->
   <meta name="twitter:card" content="summary_large_image" />
-  <meta name="twitter:title" content="Good Samaritan Home Care Pty Ltd" />
+  <meta name="twitter:title" content="goodsamaritan | Home Care NSW" />
   <meta name="twitter:description" content="Trusted in-home support tailored to your family's needs in NSW." />
   <meta name="twitter:image" content="https://goodsamaritan.site/Images/Good_Samaritan.jpg" />
 
@@ -40,6 +41,7 @@
   <!-- EmailJS -->
   <script src="https://cdn.jsdelivr.net/npm/@emailjs/browser@3/dist/email.min.js"></script>
 </head>
+
     
 <body>
     <!-- Header with Video Background -->
